v10.2.1/_sources/generated/pcdsdevices.lxe._ReversedTimeToolDelay.rst.txt
pcdsdevices.lxe.\_ReversedTimeToolDelay
=======================================

.. currentmodule:: pcdsdevices.lxe

.. autoclass:: _ReversedTimeToolDelay

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - delay (FCpt)
          - :class:`~pcdsdevices.pseudopos.PseudoSingleInterface`
          - 
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.pseudopos.DelayNewport`
    
        * - user_offset
          - :class:`~pcdsdevices.signal.NotepadLinkedSignal`
          - ``:OphydOffset``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.pseudopos.DelayNewport`
    
        * - motor
          - :class:`~pcdsdevices.epics_motor.Newport`
          - 
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.pseudopos.DelayNewport`
    

    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: camonitor
    .. automethod:: check_single
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: end_monitor_thread
    .. automethod:: forward
    .. automethod:: get
    .. automethod:: inverse
    .. automethod:: move
    .. automethod:: move_single
    .. automethod:: mv
    .. automethod:: mv_ginput
    .. automethod:: mvr
    .. automethod:: post_elog_status
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: screen
    .. automethod:: set
    .. automethod:: set_current_position
    .. automethod:: set_defaults
    .. automethod:: set_position
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: to_pseudo_tuple
    .. automethod:: to_real_tuple
    .. automethod:: trigger
    .. automethod:: tweak
    .. automethod:: umv
    .. automethod:: umvr
    .. automethod:: wait
    .. automethod:: wm
    .. automethod:: wm_update
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: composite_egu
    .. autoattribute:: concurrent
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: connection_timeout
    .. autoattribute:: egu
    .. autoattribute:: high_limit
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: limits
    .. autoattribute:: low_limit
    .. autoattribute:: moving
    .. autoattribute:: position
    .. autoattribute:: pseudo_positioners
    .. autoattribute:: real_position
    .. autoattribute:: real_positioners
    .. autoattribute:: sequential
    .. autoattribute:: settle_time
    .. autoattribute:: subscriptions
    .. autoattribute:: target
    .. autoattribute:: timeout
    
    